# taio_set_family

./: .gitignore  BC  CA  README.txt  compile_and_run.sh  example_set  similar
scripts/: compile.sh  generate_set.sh  run_tests.sh
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: TaioData.h  TaioHashMap.h  TaioSet.h  TaioSetFamily.h  TaioSetList.h
src/common/src/: TaioData.c  TaioHashMap.c  TaioSet.c  TaioSetFamily.c  TaioSetList.c
src/main/: CMakeLists.txt  main.c  main.cpp
src/set_parser/: CMakeLists.txt
src/set_parser/include/set_parser/: SetParser.h
src/set_parser/src/: SetParser.c  SetParser.cpp
src/taio_console/: CMakeLists.txt  main.c
src/taio_gui/: CMakeLists.txt  calculatingworker.cpp  calculatingworker.h  main.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  resultDialog.ui  resultdialog.cpp  resultdialog.h  stringlistmap.cpp  stringlistmap.h
src/taio_lib/: CMakeLists.txt  SetParser.c  SetParser.h  SetRunner.c  SetRunner.h  TaioAlgorithms.c  TaioData.c  TaioData.h  TaioHashMap.c  TaioHashMap.h  TaioSet.c  TaioSetFamily.c  TaioSetFamily.h  TaioSetList.c  TaioSetList.h  taioalgorithms.h
test_sets/: AB  AB.out  BC.out  CA.out  all.out  almost_same_10.out  almost_same_10.txt  example_set.out  huge_sets  huge_sets.out  myset.out  myset.txt  random_1  random_1.out  random_10000_10000  random_10000_10000.out  random_1000_10.out  random_1000_10.txt  random_1000_100.out  random_1000_100.txt  random_1000_1000.out  random_1000_1000.txt  random_100_100.out  random_100_100.txt  same_sets  same_sets.out  similarAB.out  similarBA.out  similarBA.txt
